Checkout Mobile Assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
   -->
 
 <resources>
-    <string name="app_name">CleanTemplate</string>
+    <string name="app_name">CheckoutMobileChallenge</string>
 </resources>
